# gallery

./: .dockerignore  Dockerfile  README.md  evagallery.sql  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-container.yaml  docs.yaml
3D/: index.html
3D/TemplateData/: style.css
ai_api/: .pre-commit-config.yaml  Dockerfile  README.md  bentofile.yaml  pyproject.toml
ai_api/alembic/: env.py
ai_api/alembic/versions/: 73cbf5c3801e_.py  b4328055fa2f_.py
ai_api/src/ai_api/: main.py
ai_api/src/ai_api/database/: postgres_client.py
ai_api/src/ai_api/orm/: image.py
ai_api/src/ai_api/util/: logger.py
app/: artists.tsx  front.css  globals.css  layout.tsx  page.tsx
app/3d/: page.tsx
app/admin/: index.ts  page.tsx  types.ts
app/admin/[...url]/: page.tsx
app/admin/components/: action.tsx  button.tsx  cards.tsx  components.tsx  detail.tsx  edit.tsx  error.tsx  form.tsx  formcontrol.tsx  image.tsx  insert.tsx  list.tsx  loading.tsx  navbar.tsx  table.tsx  update.tsx
app/admin/functions/: delete.data.ts  get.data.ts  savesession.ts  set.data.ts
app/admin/modules/: index.ts
app/ai/: page.tsx
app/artists/: page.tsx
app/artists/[...slug]/: layout.tsx  page.tsx
app/artworks/: page.tsx
app/artworks/[...slug]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
app/datadmin/: layout.tsx  page.tsx
app/datadmin/components/: datadmin.input.tsx
app/designer/: page.tsx
app/eva-gallery-prize/: page.tsx
app/exhibitions/: page.tsx
app/exhibitions/[...slug]/: not-found.tsx  page.tsx
app/framework/: datax.ts  sql.ts  utils.ts
app/galleries/: layout.tsx  page.tsx
app/galleries/[...slug]/: layout.tsx  page.tsx
app/healthyz/: route.ts
app/nfts/: page.tsx
app/readyz/: route.ts
app/terms/: page.tsx
app/viktor/: index.ts  layout.tsx
app/viktor/@api/: types.ts  viktor.context.tsx
app/web/: artists.tsx  artworks.tsx  get.data.ts  get.dataOLD.ts  home.tsx  imageLoader.ts
app/web/artworks/: layout.tsx  page.tsx
app/web/components/: ArtistsGrid.tsx  ArtworkDetail.tsx  ArtworkGallery.tsx  ArtworkGalleryHome.tsx  ArtworkGalleryM.tsx  ArtworkGridWithLightbox.tsx  ArtworkLightbox.tsx  CarouselComponent.tsx  ExhibitionList.tsx  ExhibitionUnityViewer.tsx  Exhibitions.tsx  ExhibitionsHome.tsx  Footer.tsx  Galleries.tsx  Nfts.tsx  (+9 more)
docs/: .gitignore  content.tex  main.bbl-SAVE-ERROR  main.tex  references.bib  wallet_creation.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
public/: newsletter.html
public/3dplanner/: index.html
(+179 files in other folders)
