[tool.poetry]
name = "evagallery-ai-api"
version = "0.0.1-pre"
description = "The API endpoint for interacting with EVA Gallery's AI functionality"
authors = ["slobodaapl <slobodaapl@gmail.com>"]
packages = [{ include = "ai_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
bentoml = "^1.2.19,~1"
transformers = "^4.41.2,~4"
autodistill-metaclip = "^0.1.3,~0"
asyncpg = "~0"
sqlalchemy = "~2"
pgvector = "~0"
loguru = "~0"
alembic = "~1"
psycopg2-binary = "~2"

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.3"
bandit = "~1.7"
pytest = "~7.3"
pytest-socket = "~0.6"
pytest-dependency = "~0.5"
pytest-order = "~1.1"
pytest-timeout = "~2.1"
pytest-cov = "~4.0"
pytest-asyncio = "~0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
